3. adimin yeni yapisi olusturuldu

--- a/IhalematikPro/Forms/frm_Teklif_Adim3.resx
+++ b/IhalematikPro/Forms/frm_Teklif_Adim3.resx
@@ -5532,4 +5532,7 @@
         5atvx36zhjzLSBESLITB/QMgLpTXht/PJgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="bindingSourceAddWorker.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>154, 17</value>
+  </metadata>
 </root>
