--- a/IhalematikPro/Report/MainReport.resx
+++ b/IhalematikPro/Report/MainReport.resx
@@ -117,6 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="xrLabel3.Text" xml:space="preserve">
+    <value>1 Bu sütun idarece hazırlanacaktır.
+2 Bu sütun isteklilerce doldurulacaktır.
+3 Teklif vermeye yetkili kişi tarafından her sayfası ad soyad/ticaret unvanı yazılarak imzalanacaktır. Ortak girişim olarak teklif verilmesi halinde, her sayfası ad soyad/ticatet unvanı yazılarak bütün ortaklar veya yetki verdikleri kişiler tarafından imzalanacaktır </value>
+  </data>
   <metadata name="objectDataSource1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
