--- a/IhalematikPro/Forms/frm_FirmaTanimlama.resx
+++ b/IhalematikPro/Forms/frm_FirmaTanimlama.resx
@@ -5468,4 +5468,7 @@
         CAA7
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>42</value>
+  </metadata>
 </root>
